--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,6 +2,7 @@
     //Display
     display: flex;
     justify-content: center;
+    width: 100%;
 
     //Color Styling
     background-color: $background-color-light;
